Corrected class taergeting from .mapbox to .mapboxgl for vertical alignment.

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -49,7 +49,7 @@ header {
   left: 7vw;
 }
 
-#toolbar .mapbox-ctrl-group {
+#toolbar .mapboxgl-ctrl-group {
     vertical-align: top;
 }
 
